# tiny-dnn

./: CMakeLists.txt
xoxo/: CMakeLists.txt
xoxo/tiny_dnn_xoxo/: Table.cpp  Table.h  play.cpp  train.cpp
